src/main/default/objects/aforza__Payment_Transaction__c/aforza__Payment_Transaction__c.object-meta.xml
<CustomObject>
    <description>A monetary transaction against a specific account.</description>
    <label>Payment Transaction</label>
    <nameField>
        <displayFormat>PTR-{00000000}</displayFormat>
        <label>Payment Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>