src/main/default/objects/aforza__Payment_Transaction__c/fields/aforza__Account__c.field-meta.xml
<CustomField>
    <fullName>aforza__Account__c</fullName>
    <description>The account the payment transaction has been enacted against.</description>
    <inlineHelpText>The account the payment transaction has been enacted against.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>