src/main/default/objects/aforza__Payment_Transaction__c/fields/aforza__Method__c.field-meta.xml
<CustomField>
    <fullName>aforza__Method__c</fullName>
    <description>The method of payment.</description>
    <inlineHelpText>The method of payment.</inlineHelpText>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment Credit</fullName>
            </value>
            <value>
                <fullName>Adjustment Debit</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Bacs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>