src/main/default/objects/aforza__Payment_Transaction__c/fields/aforza__Status__c.field-meta.xml
<CustomField>
    <fullName>aforza__Status__c</fullName>
    <description>The current status of the transaction.</description>
    <inlineHelpText>The current status of the transaction.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Authorization</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>