src/main/default/objects/aforza__Payment_Transaction__c/fields/BtTransaction__c.field-meta.xml
<CustomField>
    <fullName>BtTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Transaction</label>
    <referenceTo>bt_stripe__Transaction__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>PaymentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>