src/main/default/objects/aforza__Payment_Transaction__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Number</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>PaymentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>